# AVArray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/AVArray/: AVArray.hpp  MyVector.hpp  Tensor.hpp
include/AVArray/impl/: Tensor.hpp  TensorBase.hpp  TensorET.hpp  TensorET_forward.hpp  TensorRef.hpp
test/: compile-test  compile-test.cpp  simd-test  simd-test.cpp
test/perf/: CMakeLists.txt  looping.cpp  matmult.cpp  sum.cpp
